# zeroshot-turkish

./: .gitignore  LICENSE  README.md  finetune-nli.py  format_results.ipynb  requirements.txt  run_nli.sh  setup.cfg  setup.py
experiments/: config.py  dataset.py  preprocess.py  utils.py
nli_training/: run_nli.sh
scripts/nli_training/: finetune-nli.py  run_nli.sh
zeroshot/: config.py  dataset.py
zeroshot_classification/: classifiers.py  config.py  dataset.py  experiment.py  preprocess.py  utils.py
zeroshot_turkish/: classifiers.py  config.py  dataset.py  experiment.py  preprocess.py
