[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:zeroshot_classification/__init__.py]

[metadata]
name = zeroshot_classification
author = Emrecan Celik
author_email = emrecncelik@gmail.com
description = Package for my thesis Zero-shot Text Classification Methods.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8